[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pure-python-ds"
version = "1.0.0"
authors = [
  { name="Parjad Minooei" },
]
description = "A strictly typed, memory-optimized, pure Python data structures library."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/ParjadM/pure-python-ds"
"Website" = "https://www.parjadm.ca/"
"Bug Tracker" = "https://github.com/ParjadM/pure-python-ds/issues"