[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pure-python-ds"
version = "1.0.0"
authors = [
  { name="Parjad Minooei"},
]
description = "A memory-optimized, strictly-typed Data Structures and Algorithms library in pure Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["pure_python_ds*"]