[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# You may need to change this if "pure-python-ds" is already taken on PyPI
name = "pure-python-ds" 
version = "1.1.0"
authors = [
  { name="Parjad Minooei" }
]
description = "A strictly typed, 100% test-covered data structures and algorithms library."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Documentation" = "https://ParjadM.github.io/pure-python-ds/"
"Source" = "https://github.com/ParjadM/pure-python-ds"

[tool.setuptools.packages.find]
include = ["pure_python_ds*"]

[tool.setuptools.package-data]
"pure_python_ds" = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"